...
                return Row(
                      children: [
                        Expanded(
                          child: _NavItem(
                            icon: Icons.spa_outlined,
                            activeIcon: Icons.spa,
                            label: 'Home',
                            isActive: widget.currentIndex == 0,
                            onTap: () => widget.onTap(0),
                          ),
                        ),
                        Expanded(
                          child: _NavItem(
...
                          ),
                        ),
                        Expanded(
                          child: _NavItem(
                            icon: Icons.menu_book_outlined,
                            activeIcon: Icons.menu_book,
                            label: 'Library',
                            isActive: widget.currentIndex == 2,
                            onTap: () => widget.onTap(2),
                          ),
                        ),
                        Expanded(
                          child: _NavItem(
...
